Parallax Component and system

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,7 +31,7 @@ set(ENGINE_SOURCES
         engine/src/systems/MouseSystem.cpp
         engine/src/systems/InputSystem.cpp
         engine/src/systems/PhysicSystem.cpp
-        )
+        engine/src/systems/ParallaxSystem.cpp)
 
 set(ENGINE_INCLUDES
         engine/include/ecs/Entity.hpp
@@ -64,7 +64,9 @@ set(ENGINE_INCLUDES
         engine/include/systems/InputSystem.hpp
         engine/include/systems/PhysicSystem.hpp
         engine/include/entities/Drawable.hpp
-        engine/include/tools/Utils.hpp)
+        engine/include/tools/Utils.hpp
+        engine/include/components/ParallaxComponent.hpp
+        engine/include/systems/ParallaxSystem.hpp engine/include/entities/ParallaxSlide.hpp)
 
 set(CLIENT_SOURCES
         client/src/main.cpp
