Add boost to conanfile and CMakeLists, and add first implementation for TCP

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,6 @@ cmake_minimum_required(VERSION 3.14)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "./bin")
 
 if (UNIX)
-    add_definitions(-D_GLIBCXX_USE_CXX11_ABI=1)
     set(CMAKE_CXX_STANDARD 17)
     add_definitions("-fPIC")
 endif()
@@ -96,14 +95,14 @@ set(SERVER_SOURCES
         server/client/Client.cpp
         server/lobby/lobbyManager/LobbyManager.cpp
         server/lobby/lobby/Lobby.cpp
-        )
+        server/client/TCP/TcpSocket.cpp)
 
 set(SERVER_INCLUDES
         server/core/Core.hpp
         server/client/Client.hpp
         server/lobby/lobbyManager/LobbyManager.hpp
         server/lobby/lobby/Lobby.hpp
-        )
+        server/Client/TCP/TcpSocket.hpp)
 
 add_executable(r-type_client ${ENGINE_SOURCES} ${ENGINE_INCLUDES} ${CLIENT_SOURCES} ${CLIENT_INCLUDES})
 add_executable(r-type_server ${ENGINE_SOURCES} ${ENGINE_INCLUDES} ${SERVER_SOURCES} ${SERVER_INCLUDES})
@@ -113,7 +112,8 @@ target_include_directories(r-type_server PRIVATE
         engine/include
         server/client
         server/lobby/lobbyManager
-        server/lobby/lobby)
+        server/lobby/lobby
+        server/Client/TCP)
 target_include_directories(r-type_client PRIVATE
         client/include
         engine/include)
@@ -125,16 +125,15 @@ message("===========================================")
 target_link_libraries(r-type_client ${CONAN_LIBS})
 target_link_libraries(r-type_server ${CONAN_LIBS})
 
-#if(MSVC)
-#    set(Boost_USE_STATIC_LIBS        ON)  # only find static libs
-#    set(Boost_USE_DEBUG_LIBS         OFF) # ignore debug libs and
-#    set(Boost_USE_RELEASE_LIBS       ON)  # only find release libs
-#    set(Boost_USE_MULTITHREADED      ON)
-#    set(Boost_USE_STATIC_RUNTIME     OFF)
-#    find_package(Boost 1.71.0 COMPONENTS serialization)
-#    if(Boost_FOUND)
-#        include_directories(${Boost_INCLUDE_DIRS})
-#        target_link_libraries(r-type_client ${Boost_LIBRARIES})
-#        target_link_libraries(r-type_server ${Boost_LIBRARIES})
-#    endif()
-#endif()
+if(MSVC)
+    set(Boost_USE_STATIC_LIBS        ON)  # only find static libs
+    set(Boost_USE_DEBUG_LIBS         OFF) # ignore debug libs and
+    set(Boost_USE_RELEASE_LIBS       ON)  # only find release libs
+    set(Boost_USE_MULTITHREADED      ON)
+    set(Boost_USE_STATIC_RUNTIME     OFF)
+    if(Boost_FOUND)
+        include_directories(${Boost_INCLUDE_DIRS})
+        target_link_libraries(r-type_client ${Boost_LIBRARIES})
+        target_link_libraries(r-type_server ${Boost_LIBRARIES})
+    endif()
+endif()
